Only store example secrets and database configs

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@
 app/.DS_Store
 app/assets/.DS_Store
 .idea/joaana-cleaning-service.iml
-.idea/workspace.xml
+.idea/workspace.xmlconfig/database.yml\nconfig/secrets.yml
