--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,11 @@ default: &default
 development:
   <<: *default
   database: joanna_development
+  username: farooq
+
+    # The password associated with the postgres role (username).
+  password:
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
