--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
+/config/database.yml
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -24,7 +24,7 @@
 # Ignore application configuration
 /config/application.yml
 
-
+/.idea/*
 
 .DS_Store
 .pryrc
